fix: css gap

--- a/style.css
+++ b/style.css
@@ -35,14 +35,14 @@ body {
     flex-direction: column;
     align-items: center;
     border-radius: 30px;
-    justify-content: space-between;
+    justify-content: center;
     background-color: var(--principal);
     background-position: center;
     overflow: hidden;
     width: 50dvw;
     height: 70dvh;
     padding: 20px;
-    gap: 5px;
+    gap: 15px;
     -webkit-user-drag: none;
 }
 
